Issue #17330: Upgrade caciocavallo to latest